@@ -2,3 +2,11 @@
 
 %:
 	dh $@
+
+override_dh_auto_test:
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	set -e; \
+		for python in $(shell pyversions -r); do \
+			$$python setup.py test; \
+		done
+endif
